--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <title>Create User</title>
 </head>
 <body>
-    <h1>My name is pradeep tanwar.</h1>
+    <h2>Create a New User</h2>
+    <form action="/create" method="POST">
+        <label>Name:</label>
+        <input type="text" name="name" required>
+        <br>
+        <label>Email:</label>
+        <input type="email" name="email" required>
+        <br>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
